--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-asgiref==3.7.2
-Django==4.2.3
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-Pillow==10.0.0
-PyJWT==2.7.0
-pytz==2023.3
-sqlparse==0.4.4
-typing_extensions==4.7.1
+asgiref==3.9.1
+Django==5.2.6
+django-environ==0.12.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+drf-yasg==1.21.10
+inflection==0.5.1
+packaging==25.0
+pillow==11.3.0
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
+pytz==2025.2
+PyYAML==6.0.2
+setuptools==80.9.0
+simplejwt==2.0.1
+sqlparse==0.5.3
+typing==3.7.4.3
+uritemplate==4.2.0
+wheel==0.45.1
